--- a/templates/blog/post_edit.html
+++ b/templates/blog/post_edit.html
@@ -2,7 +2,8 @@
 
 {% block content %}
     <h1>New post</h1>
-    <form method="post" class="post-form">{% csrf_token %}
+    <form method="post" class="post-form">
+        {% csrf_token %}
         {{ form.as_p }}
         <button type="submit" class="save btn btn-default">Save</button>
     </form>
