--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -8,7 +8,7 @@
             Please try again.
         </p>
     {% else %}
-        <p>Please, use the following form to log-in. If you don't have an account, register <a href="{% url "register" %}">here</a></p>
+        <p>Please, use the following form to log-in. If you don't have an account, register <a href="{% url "signup" %}">here</a></p>
     {% endif %}
     <div class="login-form">
         <form action="{% url 'login' %}" method="post">
