--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -25,6 +25,18 @@
         <h1><a href="{% url 'like_increment' pk=post.pk %}">{{ post.like_quantity }} like{{ post.like_quantity|pluralize }}</a></h1>
     </div>
 
+    {% if post.tags.all %}
+        <p class="tags">
+            Tags:
+            {% for tag in post.tags.all %}
+                <a href="{% url "post_list_by_tag" tag.slug %}">
+                    {{ tag.name }}
+                </a>
+                {% if not forloop.last %}, {% endif %}
+            {% endfor %}
+        </p>
+    {% endif %}
+
     <div class="comment">
         <h3>{{ comments.count }} comment{{ comments.count|pluralize }}</h3>
 {#        <a class="btn btn-default" href="{% url 'add_comment_to_post' pk=post.pk %}">Write your comment</a>#}
@@ -52,8 +64,8 @@
             <h3>Write your comment</h3>
             <div class="user-form">
                 <form method="post" action=".">
-                {% csrf_token %}
-                {{ comment_form.as_p }}
+                    {% csrf_token %}
+                    {{ comment_form.as_p }}
                 <p><input type="submit" value="Add comment"></p>
             </form>
             </div>
