--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,5 +1,6 @@
 .page-header {
-    background-color: #ff9400;
+    /*background-color: #ff9400;*/
+    background-color: #00FF00;
     margin-top: 0;
     padding: 20px 20px 20px 40px;
 }
