--- a/templates/accounts/signup.html
+++ b/templates/accounts/signup.html
@@ -43,6 +43,7 @@
                     </div>
                     <button type="submit" class="btn btn-primary">Submit</button>
                 </form>
+                <p>If you are already registered, <a href="{% url 'login' %}">sign in</a>.</p>
             </div>
         </div>
     </div>
