--- a/templates/blog/message.html
+++ b/templates/blog/message.html
@@ -1,14 +1,11 @@
-{% extends 'blog/base.html' %}
-
 {% block content %}
-    {% url 'users:profile' message_item.sender.user.username as the_user_url%}
     {% load tz %}
     <div class="list-group-item {% if not message_item.is_read %}unread{% endif %}">
 {#        <a href="{{ the_user_url }}"><img class="avatar-comment" src="{{ message_item.author.userprofile.get_avatar }}"></a>#}
         <div class="reply-body">
             <ul class="list-inline">
                 <li class="drop-left-padding">
-                    <strong class="list-group-item-heading"><a href="{{ the_user_url }}">{{ message_item.sender.user.username }}</a></strong>
+                    <strong class="list-group-item-heading"><a href="{% url 'user_page' message_item.sender.pk %}">{{ message_item.sender.user.username }}</a></strong>
                 </li>
                 <li class="pull-right text-muted"><small>{{ message_item.departure_date|utc }}</small></li>
             </ul>
