--- a/templates/blog/post_edit.html
+++ b/templates/blog/post_edit.html
@@ -5,6 +5,6 @@
     <form method="post" class="post-form">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit" class="save btn btn-default">Save</button>
+        <button type="submit" class="save btn btn-default">Create</button>
     </form>
 {% endblock %}
