--- a/templates/blog/post_list.html
+++ b/templates/blog/post_list.html
@@ -3,6 +3,17 @@
 {% block content %}
     {% for post in posts %}
         <div class="post">
+            {% if post.tags.all %}
+                <p class="tags">
+                    Tags:
+                    {% for tag in post.tags.all %}
+                        <a href="{% url "post_list_by_tag" tag.slug %}">
+                            {{ tag.name }}
+                        </a>
+                        {% if not forloop.last %}, {% endif %}
+                    {% endfor %}
+                </p>
+            {% endif %}
             <p class="date">Published: {{ post.published_date }} by <strong><a href="{% url 'user_page' pk=post.author.profile.pk %}">{{ post.author }}</a></strong></p>
             <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
             <p>{{ post.text|linebreaksbr }}</p>
