Added tests and other little stuff
The state of delivery of the last laboratory work:
added tests,
added requirements.txt,
changed fields for token generation,
added db indices.

--- a/templates/blog/post_edit.html
+++ b/templates/blog/post_edit.html
@@ -5,6 +5,8 @@
     <form method="post" class="post-form">
         {% csrf_token %}
         {{ form.as_p }}
+{#        {% if form.method == 'post' %}#}
+{#        todo changing 'create' to 'edit' when editing#}
         <button type="submit" class="save btn btn-default">Create</button>
     </form>
 {% endblock %}
