--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -20,7 +20,7 @@
             {% else %}
                 <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>
             {% endif %}
-            <h1><a href="/">Main page</a></h1>
+            <h1><a href="/">Blog</a></h1>
 {#            <h3><a href="/admin/">To admin</a></h3>#}
 
 {#            <span class="logo">Tygydyn</span>#}
